--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
+    "firebase": "^9.9.4",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuefire": "^2.2.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
